WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
128278
<1/100 probability FTL failure: v8-v6/v8-deltablue.js.ftl-eager: Exception: TypeError: undefined is not an object (evaluating 'c.isInput')
https://bugs.webkit.org/show_bug.cgi?id=128278
Summary
<1/100 probability FTL failure: v8-v6/v8-deltablue.js.ftl-eager: Exception: T...
Filip Pizlo
Reported
2014-02-05 15:52:30 PST
...
Attachments
the patch
(6.94 KB, patch)
2014-02-10 00:22 PST
,
Filip Pizlo
mhahnenberg
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-11 for mac-mountainlion-wk2
(477.50 KB, application/zip)
2014-02-10 02:05 PST
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2014-02-09 20:50:36 PST
I can get it to repro more frequently if I increase the load on the machine.
Filip Pizlo
Comment 2
2014-02-09 21:11:58 PST
It's a FTL miscompile on chainTest#BRCzIm, which has 430 bytecode instructions.
Filip Pizlo
Comment 3
2014-02-10 00:02:59 PST
Reduced test case: function Foo(a, b) { this.f = a.f; this.g = b.f + 1; } function foo(a, b) { return new Foo(a, b); } noInline(foo); for (var i = 0; i < 100000; ++i) { var result = foo({f:1}, {f:2}); if (result.f != 1) throw "Error: bad result.f: " + result.f; if (result.g != 3) throw "Error: bad result.g: " + result.g; } var result = foo({f:1}, {f:2.5}); if (result.f != 1) throw "Error: bad result.f: " + result.f; if (result.g != 3.5) throw "Error: bad result.f: " + result.g;
Filip Pizlo
Comment 4
2014-02-10 00:22:44 PST
Created
attachment 223681
[details]
the patch
Build Bot
Comment 5
2014-02-10 02:05:35 PST
Comment on
attachment 223681
[details]
the patch
Attachment 223681
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/6337216930381824
New failing tests: http/tests/misc/last-modified-parsing.html
Build Bot
Comment 6
2014-02-10 02:05:38 PST
Created
attachment 223685
[details]
Archive of layout-test-results from webkit-ews-11 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-11 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Mark Hahnenberg
Comment 7
2014-02-10 08:27:39 PST
Comment on
attachment 223681
[details]
the patch r=me
Filip Pizlo
Comment 8
2014-02-10 09:02:11 PST
Landed in
http://trac.webkit.org/changeset/163789
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug