Source/JavaScriptCore/runtime/Options.h
@@ -122,6 +122,7 @@ typedef OptionRange optionRange;
     v(bool, validateGraph, false) \
     v(bool, validateGraphAtEachPhase, false) \
     v(bool, verboseOSR, false) \
+    v(bool, verboseFTLOSRExit, false) \
     v(bool, verboseCallLink, false) \
     v(bool, verboseCompilationQueue, false) \
     v(bool, reportCompileTimes, false) \
